--- a/08-worldwise/src/pages/Homepage.module.css
+++ b/08-worldwise/src/pages/Homepage.module.css
@@ -5,7 +5,7 @@
       rgba(72, 84, 92, 0.8),
       rgba(36, 42, 46, 0.8)
     ),
-    url("../bg.jpg");
+    url("/public/bg.jpg");
   background-size: cover;
   background-position: center;
   padding: 2.5rem 5rem;
